--- a/exercises/css-design-systems/index.html
+++ b/exercises/css-design-systems/index.html
@@ -11,8 +11,26 @@
 		<link rel="stylesheet" href="styles/globals.css" />
 		<link rel="stylesheet" href="styles/button.css" />
 		<link rel="stylesheet" href="styles/input.css" />
+		<link rel="stylesheet" href="styles/avatar.css" />
 	</head>
 	<body>
+		<div class="wrapper">
+			<h3 class="wrapper__title">Avatar</h3>
+			<div class="wrapper__content">
+				<div class="flex">
+					<div class="avatar avatar--sm">
+						<img src="./assets/user.jpeg" alt="" />
+					</div>
+					<div class="avatar avatar--md">
+						<img src="./assets/user.jpeg" alt="" />
+					</div>
+					<div class="avatar avatar--lg">
+						<img src="./assets/user.jpeg" alt="" />
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<div class="wrapper">
 			<h3 class="wrapper__title">Buttons</h3>
 			<div class="wrapper__content">
