add: class 3 and class 2 presentations

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<span class="class-count">Aula 2</span>
 				<span class="class-type">html</span>
 			</a>
-			<a class="chapter" target="_blank" disabled href="classes/class-3.html">
+			<a class="chapter" target="_blank" href="classes/class-3.html">
 				<span class="class-count">Aula 3</span>
 				<span class="class-type">css</span>
 			</a>
