add: Data to class 3

--- a/exercises/css-design-systems/index.html
+++ b/exercises/css-design-systems/index.html
@@ -110,6 +110,15 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="wrapper">
+			<h3 class="wrapper__title">Inputs</h3>
+			<div class="wrapper__content">
+				<div class="flex">
+					<!-- Conteúdo aqui -->
+				</div>
+			</div>
+		</div>
 	</body>
 	<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 	<script>
