--- a/classes/class-8.html
+++ b/classes/class-8.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="template">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Aula 1</title>
+		<title>Aula 8</title>
+		<link rel="stylesheet" href="../common/styles.css" />
 	</head>
+
 	<body>
-		<h1 class="" class__title>Aula 1</h1>
+		<nav>
+			<a href="/">Voltar atrás</a>
+		</nav>
+		<h1 class="" class__title>Aula 8</h1>
+		<ul class="index">
+			<li><a href="#examples">Exemplos</a></li>
+		</ul>
+
+		<h3 id="examples">Exemplos</h3>
+		<div class="examples__container">
+			<!-- <a href="../examples/clario-cards/clario.html">Cartão de Dashboard</a> -->
+		</div>
+
+		<!-- Seccção -->
+		<h3 id="css-fundamentals">Conceitos Básicos de CSS</h3>
+		<section></section>
 	</body>
 </html>
