--- a/exercises/css-mondrian/index.html
+++ b/exercises/css-mondrian/index.html
@@ -90,11 +90,11 @@
 			<div class="board-box-3 bg-gray"></div>
 		</div>
 
-		<div class="board board-6">
+		<!-- <div class="board board-6">
 			<div class="board-box-1 bg-purple"></div>
 			<div class="board-box-2 bg-green"></div>
 			<div class="board-box-3 bg-green"></div>
 			<div class="board-box-4 bg-orange"></div>
-		</div>
+		</div> -->
 	</body>
 </html>
