--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<span class="class-count">Aula 3</span>
 				<span class="class-type">css</span>
 			</a>
-			<a class="chapter" target="_blank" disabled href="classes/class-4.html">
+			<a class="chapter" target="_blank" href="classes/class-4.html">
 				<span class="class-count">Aula 4</span>
 				<span class="class-type">css</span>
 			</a>
