--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<span class="class-count">Aula 4</span>
 				<span class="class-type">css</span>
 			</a>
-			<a class="chapter" target="_blank" disabled href="classes/class-5.html">
+			<a class="chapter" target="_blank" href="classes/class-5.html">
 				<span class="class-count">Aula 5</span>
 				<span class="class-type">css</span>
 			</a>
